# anon_api

./: CHANGELOG.md  Dockerfile  Makefile  Pipfile  README.md  config_default.toml  config_default.yaml  env.default.sh  pyproject.toml  setup.cfg
anon_api/: deps.py  lib_cfg.py  lib_datamine.py  lib_graphql.py  lib_misc.py  lib_workers.py  main.py  models.py
anon_api/modules/: anon_bert.py  anon_etaamb.py  anon_mask.py  anon_test.py  anon_trazor.py
anon_api/routers/: anonymise.py  extract.py
doc/: README.md  cde_247338.html  cde_247338.md  tika_keys.md
tests/: anon_etaamb_test.py  anon_textrazor_test.py
tests/behave/: environment.py  fixtures.py
tests/behave/features/: doc_anon.feature  doc_parse.feature
tests/behave/steps/: api_steps.py
