[tool.poetry]
name = "anon_api"
version = "0.1.0"
description = ""
authors = ["pmontens <pieterjan@montens.net>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
fastapi = "^0.61.2"
uvicorn = "^0.12.2"
pytz = "^2020.4"
PyYAML = "^5.3.1"
requests = "^2.25.0"
textrazor = "^1.4.0"
graphene = "^2.1.8"
python-multipart = "^0.0.5"
unicode = "^2.7"
0html = "^0.0.0"
bs4 = "^0.0.1"
lxml = "^4.6.1"
html2markdown = "^0.1.7"
httpx = "^0.16.1"
websockets = "^9.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
flake8 = "^3.8.4"
pylint = "^2.6.0"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = "anon_api.main:main"
